--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
   </head>
   <body>
     <header class="header">
-      <nav class="flex">
-        <a href="#one">one</a>
-        <a href="#two">two</a>
-        <a href="#three">three</a>
-        <a href="#four">about me</a>
-      </nav>
+      <div class="header-wrapper">
+        <img src="/img/laptop-logo.jpg" alt="laptop at ground at night" />
+
+        <nav class="flex">
+          <a href="#one">one</a>
+          <a href="#two">two</a>
+          <a href="#three">three</a>
+          <a href="#four">about me</a>
+        </nav>
+      </div>
     </header>
     <main class="flex-column justified-center align-items-center">
       <section class="card" id="one">
@@ -109,9 +113,61 @@
         </div>
       </section>
       <section class="card" id="two"></section>
-      <section class="card" id="three"></section>
-      <section class="card" id="four">
+      <section class="card" id="three">
         <h2 class="uppercase">about me</h2>
+      </section>
+      <section class="card" id="four">
+        <div class="form-container">
+          <form
+            method="GET"
+            action="/contactSuccess/index.html"
+            class=""
+            id="contactForm"
+          >
+            <div>
+              <label>
+                Name (required)
+                <input name="Name" id="Name" />
+              </label>
+              <div class="form-error" id="NameError">
+                <i class="fa-solid fa-triangle-exclamation"></i> Minimum 2
+                characters
+              </div>
+            </div>
+            <div>
+              <label>
+                Phone number (minimum 8 digits)
+                <input name="phone" id="phone" />
+              </label>
+              <div class="form-error" id="phoneError">
+                <i class="fa-solid fa-triangle-exclamation"></i> Your phone
+                number must be at least 8 digits
+              </div>
+            </div>
+            <div>
+              <label>
+                Email (required) <input name="email" id="email" />
+              </label>
+              <div class="form-error" id="emailError">
+                <i class="fa-solid fa-triangle-exclamation"></i> Please enter a
+                valid email address
+              </div>
+            </div>
+            <div>
+              <label>
+                Message
+                <textarea
+                  placeholder="Please write yor message here"
+                  name="story"
+                  id="story"
+                  rows="5"
+                  cols="25"
+                ></textarea>
+              </label>
+            </div>
+            <input type="submit" class="form-button" value="Submit" />
+          </form>
+        </div>
       </section>
     </main>
     <footer class="footer">footer</footer>
