--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio 1</title>
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="icon" href="data:," />
     <script src="/js/index.js" type="module"></script>
     <script
       src="https://kit.fontawesome.com/fe3b43ee88.js"
@@ -14,7 +15,7 @@
   <body>
     <header class="header">
       <div class="header-wrapper">
-        <img src="/img/laptop-logo.jpg" alt="laptop at ground at night" />
+        <img src="/img/laptop-logo.jpg" alt="laptop in the grass at night" />
 
         <nav class="flex">
           <a href="#one">one</a>
@@ -26,7 +27,6 @@
     </header>
     <main class="flex-column justified-center align-items-center">
       <section class="card" id="one">
-        <!-- <img src="img/background1.jpg" alt="img of random" class="card-img" /> -->
         <div class="flip-card">
           <div
             class="flip-card__front-side flex justified-evenly align-items-center"
