--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             class="flip-card__front-side flex justified-evenly align-items-center"
           >
             <h1 class="uppercase">project exam 1</h1>
+            <button class="card-button"><i class="fa-solid fa-play"></i></button>
           </div>
 
           <div
@@ -63,7 +64,9 @@
             <h2 class="capitalize">project exam 1</h2>
             <a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-jonhavbra87"><i class="fa-brands fa-github"></i>GitHUB</a>
             <a href="https://kil-handball.kongsvinger-it.no/index.html"><i class="fa-solid fa-globe"></i>Website</a>
+            <button class="card-button"><i class="fa-solid fa-eject"></i></button>
         </article>
+    
           </div>
         </div>
         <div class="flip-card">
@@ -71,6 +74,7 @@
             class="flip-card__front-side flex justified-evenly align-items-center"
           >
             <h1 class="uppercase">semester project 1</h1>
+            <button class="card-button"><i class="fa-solid fa-play"></i></button>
           </div>
 
           <div
@@ -80,7 +84,9 @@
             <h2 class="capitalize">semester project 1</h2>
             <a href="https://github.com/jonhavbra87/Community_Science_Museum"><i class="fa-brands fa-github"></i>GitHUB</a>
             <a href="https://c-s-museum.netlify.app/"><i class="fa-solid fa-globe"></i>Website</a>
+            <button class="card-button"><i class="fa-solid fa-eject"></i></button>
         </article>
+     
           </div>
         </div>
         <div class="flip-card">
@@ -88,6 +94,7 @@
             class="flip-card__front-side flex justified-evenly align-items-center"
           >
             <h1 class="uppercase">cross-course project</h1>
+            <button class="card-button"><i class="fa-solid fa-play"></i></button>
           </div>
 
           <div
@@ -97,7 +104,9 @@
                 <h2 class="capitalize">cross-course project</h2>
                 <a href="https://github.com/jonhavbra87/gamehub/tree/wpAPI"><i class="fa-brands fa-github"></i>GitHUB</a>
                 <a href="https://gamehub.kongsvinger-it.no/i"><i class="fa-solid fa-globe"></i>Website</a>
+                <button class="card-button"><i class="fa-solid fa-eject"></i></button>
             </article>
+  
           </div>
         </div>
       </section>
