--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <article class="flex justified-center align-items-center horizontal-gap about-me">
       <feature>
             <img
-              src="/img/Profile.jpg"
+              src="/img/profile.jpg"
               alt="profile picture"
               class="profile-img"
             />
