fixing av header

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#one"><h1>about me</h1></a></li>
             <li><a href="#two"><h1>project exam 1</h1></a></li>
             <li><a href="#three"><h1>semester project 1</h1></a></li>
-            <li><a href="#four"><h1>cross-course</h1></li>
+            <li><a href="#four"><h1>cross-course</h1></a></li>
             <li><a href="#five"><h1>contact</h1></a></li>
           </ul>
         </nav>
@@ -35,8 +35,8 @@
     </header>
     <main class="flex-column justified-center align-items-center">
       <section class="card" id="one">
-        <h1 class="uppercase bold text-align-center">about me</h1>
-        <article class="flex justified-center align-items-center horizontal-gap about-me">
+      <!--   <h1 class="uppercase bold text-align-center">about me</h1> -->
+        <article class="flex justified-center align-items-center about-me">
       <feature>
             <img
               src="/img/profile.jpg"
