--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <article class="flex justified-center align-items-center about-me">
           <img
           src="/img/profile.jpg"
-          alt="profile picture"
+          alt="profile picture of me"
           class="profile-img"
         />
           <div class="text-container">
@@ -51,7 +51,7 @@
               <p>As an online learner, I've developed a strong self-driven work ethic and a flexible approach to <span class="bold">problem-solving.</span> My projects showcase a blend of <span class="bold">modern design principles</span> and <span class="bold">efficient</span> coding practices. I believe in crafting websites that are not only visually stunning but also <span class="bold">user-friendly</span>, ensuring a seamless experience for all users.</p>
               
               <p>My portfolio is a testament to my journey in front-end development, featuring projects that highlight my ability to transform ideas into digital realities. Each project is a step forward in my continuous quest for knowledge and excellence in the field of web development. I am eager to collaborate, learn, and grow as I embark on new challenges and opportunities in the dynamic world of front-end development.</p>
-              <p><span class="italic">Let's create something amazing together!</span>
+              <p class="margin-top sticker"><span class="italic">Let's create something amazing together!</span>
             </p>
           </div>
           </article>
