--- a/index.html
+++ b/index.html
@@ -194,6 +194,6 @@
     </section>
     </main>
     <footer class="footer">footer</footer>
-    <button id="backToTop" title="Gå til toppen">↑ Top</button>
+    <button id="backToTop" class="backToTop" title="Back to top">↑ Top</button>
   </body>
 </html>
