--- a/index.html
+++ b/index.html
@@ -193,7 +193,17 @@
       </div>
     </section>
     </main>
-    <footer class="footer">footer</footer>
-    <button id="backToTop" class="backToTop" title="Back to top">↑ Top</button>
+    <footer>
+      <div class="footer-content">
+        <div>
+          <i class="fa-brands fa-github"></i>
+          <a href="https://github.com/jonhavbra87/"></a></div>
+        <div>
+          <i class="fa-solid fa-globe"></i>
+          <a href="https://kongsvinger-it.no"></a>
+       </div>
+       </div>
+    </footer>
+    <button id="backToTop" class="back-to-top" title="Back to top">Top</button>
   </body>
 </html>
