--- a/index.html
+++ b/index.html
@@ -66,72 +66,64 @@
           </div>
 
           <div class="flip-card__back-side flex">
-          <img class="flip-card__back-img" src="/img/pe1.jpg" alt="picture of kil-handball website on mobile">
-          <div class="flip-card-text-container flex-column">
+            <img class="flip-card__back-img" src="/img/pe1.jpg" alt="picture of kil-handball website on mobile">
+            <div class="flip-card-text-container flex-column">
             <h2 class="capitalize bold">project exam 1<h2>
             <p>In my exam my goal was to create a website that could work for my local handball team. The users are coaches, parents and athletes related to the club, and the website works as a information channel and exposure of the club.</p>
       
             <div class="flip-card__back-wrapper">
-              <div>
-                <i class="fa-brands fa-github"></i>
-                <a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-jonhavbra87">GitHUB</a>
+                <div>
+                  <i class="fa-brands fa-github"></i>
+                  <a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-jonhavbra87">GitHUB</a>
                 </div>
                 <div>
                   <i class="fa-solid fa-globe"></i>
                   <a href="https://kil-handball.kongsvinger-it.no/index.html">Website</a>
-              </div>
-             </div>
-            <button class="card-button" title="close project exam 1"><i class="fa-solid fa-minus"></i></button>
+                </div>
+                  <button class="card-button" title="close project exam 1"><i class="fa-solid fa-minus"></i></button>
             </div>
           </div>
         </div>
       </div>
       <div class="card flex justified-center align-items-center flex-wrap" id="three">
         <div class="flip-card">
-          <div
-            class="flip-card__front-side flex justified-evenly align-items-center card-img-sp1"
-          >
+          <div class="flip-card__front-side flex justified-evenly align-items-center card-img-sp1">
             <h1 class="uppercase h1-background bold">semester project 1</h1>
             <button class="card-button" title="open semester project 1"><i class="fa-solid fa-plus"></i></button>
           </div>
 
-          <div
-            class="flip-card__back-side flex"
-          >
-          <img class="flip-card__back-img" src="/img/sp1.jpg" alt="picture of community science museum website on mobile">
-          <div class="flip-card-text-container flex-column">
-            <h2 class="capitalize bold">semester project 1</h2>
-            <p>In my semester project 1 the users are teachers, studends, parents and child from age 7 - 15 years old.</p>
-            <div class="flip-card__back-wrapper">
-              <div>
-                <i class="fa-brands fa-github"></i>
-                <a href="https://github.com/jonhavbra87/Community_Science_Museum">GitHUB</a></div>
-              <div>
-                <i class="fa-solid fa-globe"></i>
-                <a href="https://c-s-museum.netlify.app/">Website</a>
+          <div class="flip-card__back-side flex">
+                <img class="flip-card__back-img" src="/img/sp1.jpg" alt="picture of community science museum website on mobile">
+            <div class="flip-card-text-container flex-column">
+                <h2 class="capitalize bold">semester project 1</h2>
+                <p>In my semester project 1 the users are teachers, studends, parents and child from age 7 - 15 years old.</p>
+              <div class="flip-card__back-wrapper">
+                <div>
+                  <i class="fa-brands fa-github"></i>
+                  <a href="https://github.com/jonhavbra87/Community_Science_Museum">GitHUB</a>
+                </div>
+                <div>
+                  <i class="fa-solid fa-globe"></i>
+                  <a href="https://c-s-museum.netlify.app/">Website</a>
+                </div>
              </div>
-             </div>
-            <button class="card-button" title="close semester project 1"><i class="fa-solid fa-minus"></i></button>
-        </div>
+                <button class="card-button" title="close semester project 1"><i class="fa-solid fa-minus"></i></button>
+            </div>
           </div>
         </div>
-        
-   
       </div>
       <div class="card flex justified-center align-items-center flex-wrap" id="four">
         <div class="flip-card">
-          <div
-          class="flip-card__front-side flex justified-center card-img-ccp"
-        >
-          <h1 class="uppercase h1-background bold">cross-course project</h1>
-          <button class="card-button" title="open cross-course project"><i class="fa-solid fa-plus"></i></button>
-        </div>
+          <div class="flip-card__front-side flex justified-center card-img-ccp">
+            <h1 class="uppercase h1-background bold">cross-course project</h1>
+            <button class="card-button" title="open cross-course project"><i class="fa-solid fa-plus"></i></button>
+          </div>
 
-        <div class="flip-card__back-side flex">
-          <img class="flip-card__back-img" src="/img/ccp.jpg" alt="picture of cross-course project website on mobile">
-          <article class="flip-card-text-container flex-column">
-              <h2 class="capitalize bold">cross-course project</h2>
-              <p>In my exam my goal was to create a website that could work for my local handball team. The users are coaches, parents and athletes related to the club, and the website works as a information channel and exposure of the club.</p>
+          <div class="flip-card__back-side flex">
+           <img class="flip-card__back-img" src="/img/ccp.jpg" alt="picture of cross-course project website on mobile">
+            <div class="flip-card-text-container flex-column">
+                <h2 class="capitalize bold">cross-course project</h2>
+                <p>In my exam my goal was to create a website that could work for my local handball team. The users are coaches, parents and athletes related to the club, and the website works as a information channel and exposure of the club.</p>
               <div class="flip-card__back-wrapper">
                 <div>
                   <i class="fa-brands fa-github"></i>
@@ -145,9 +137,8 @@
               <button class="card-button" title="close cross-course project"><i class="fa-solid fa-minus"></i></button>
 
             </div>
-
         </div>
-      </div></div>
+      </div>
       <div class="card flex-column justified-center align-items-center" id="five">
         <h1 class="uppercase bold">contact me</h1>
         <div class="form-container">
