--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="flip-card__back-side flex">
             <img class="flip-card__back-img" src="/img/pe1.jpg" alt="picture of kil-handball website on mobile">
             <div class="flip-card-text-container flex-column">
-            <h2 class="capitalize bold">project exam 1<h2>
+            <h2 class="capitalize bold">project exam 1</h2>
             <p>In my exam my goal was to create a website that could work for my local handball team. The users are coaches, parents and athletes related to the club, and the website works as a information channel and exposure of the club.</p>
       
             <div class="flip-card__back-wrapper">
