--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
       <div class="footer-content">
         <div>
           <i class="fa-brands fa-github"></i>
-          <a href="https://github.com/jonhavbra87/"></a></div>
+          <a href="https://github.com/jonhavbra87/" aria-label="Read more about my github page"></a></div>
         <div>
           <i class="fa-solid fa-globe"></i>
-          <a href="https://kongsvinger-it.no"></a>
+          <a href="https://kongsvinger-it.no" aria-label="Read more about my homepage"></a>
        </div>
        </div>
     </footer>
