--- a/index.html
+++ b/index.html
@@ -182,17 +182,18 @@
             <input type="submit" class="form-button" value="Submit" title="send in form"/>
           </form>
       </div>
-    </div>
+    <!-- </div> -->
     </main>
     <footer class="footer">
       <div class="footer-content">
         <div>
-          <i class="fa-brands fa-github"></i>
-          <a href="https://github.com/jonhavbra87/" aria-label="Read more about my github page"></a></div>
+            <i class="fa-brands fa-github"></i>
+            <a href="https://github.com/jonhavbra87/" aria-label="Read more about my github page"></a>
+        </div>
         <div>
-          <i class="fa-solid fa-globe"></i>
-          <a href="https://kongsvinger-it.no" aria-label="Read more about my homepage"></a>
-       </div>
+            <i class="fa-solid fa-globe"></i>
+            <a href="https://kongsvinger-it.no" aria-label="Read more about my homepage"></a>
+        </div>
        </div>
     </footer>
     <button id="backToTop" title="back to top"><i class="fa-solid fa-circle-arrow-up back-to-top"></i></button>
