--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               <i class="fa-solid fa-globe"></i>
           </a>
       </div>
-      
+    </div>
     </footer>
     <button id="backToTop" title="back to top"><i class="fa-solid fa-circle-arrow-up back-to-top"></i></button>
   </body>
