--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="flex justified-center align-items-center about-me">
           <img
-            src="/img/background3.jpg"
+            src="/img/profile.jpg"
             alt="profile picture of me"
             class="profile-img"
           />
