--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header class="header">
       <div class="header-content">
         <!-- <img src="/img/laptop-logo.jpg" alt="laptop in the grass at night" /> -->
-        <div class="header-logo"><h1 class="uppercase">kongsvinger-it</h1></div>
+        <div class="header-logo">
+          <a href="/"><h1 class="uppercase home">kongsvinger-it</h1></a>
+        </div>
 
         <nav id="main-nav">
           <button id="menu-toggle" class="menu-toggle" title="hamburger-menu">
@@ -49,7 +51,7 @@
 
         <div class="flex justified-center align-items-center about-me">
           <img
-            src="/img/profile.jpg"
+            src="/img/background3.jpg"
             alt="profile picture of me"
             class="profile-img"
           />
