--- a/index.html
+++ b/index.html
@@ -14,47 +14,47 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-content">
-        <!-- <img src="/img/laptop-logo.jpg" alt="laptop in the grass at night" /> -->
-        <div class="header-logo">
-          <a href="/"><h1 class="uppercase home">kongsvinger-it</h1></a>
-        </div>
-
-        <nav id="main-nav">
-          <button id="menu-toggle" class="menu-toggle" title="hamburger-menu">
-            <i class="fa-solid fa-bars"></i>
-            <i class="fa-solid fa-xmark" style="display: none"></i>
-          </button>
-          <ul class="navigation flex">
-            <li>
-              <a href="#one"><h1>about me</h1></a>
-            </li>
-            <li>
-              <a href="#two"><h1>project exam 1</h1></a>
-            </li>
-            <li>
-              <a href="#three"><h1>semester project 1</h1></a>
-            </li>
-            <li>
-              <a href="#four"><h1>cross-course</h1></a>
-            </li>
-            <li>
-              <a href="#five"><h1>contact</h1></a>
-            </li>
-          </ul>
-        </nav>
+      <div class="header-logo">
+        <a href="/"><h2 class="uppercase home">kongsvinger-it</h2></a>
       </div>
+      <nav id="main-nav" class="main-nav">
+        <button id="menu-toggle" class="menu-toggle" title="hamburger-menu">
+          <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-xmark" style="display: none"></i>
+        </button>
+        <ul class="navigation flex">
+          <li>
+            <a href="#one"><h1>about</h1></a>
+          </li>
+          <li>
+            <a href="#two"><h1>exam</h1></a>
+          </li>
+          <li>
+            <a href="#three"><h1>semester</h1></a>
+          </li>
+          <li>
+            <a href="#four"><h1>cross-course</h1></a>
+          </li>
+          <li>
+            <a href="#five"><h1>contact</h1></a>
+          </li>
+        </ul>
+      </nav>
+      <!-- <div class="header-content">
+      </div> -->
     </header>
     <main class="flex-column justified-center align-items-center">
       <div class="card" id="one">
         <!--   <h1 class="uppercase bold text-align-center">about me</h1> -->
 
         <div class="flex justified-center align-items-center about-me">
-          <img
-            src="/img/background3.jpg"
-            alt="profile picture of me"
-            class="profile-img"
-          />
+          <div class="profile-img-container">
+            <img
+              src="/img/background3.jpg"
+              alt="profile picture of me"
+              class="profile-img"
+            />
+          </div>
           <div class="text-container">
             <p>
               My name is <span class="bold">Jon Are</span> a passionate and
